--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@tailwindcss/forms": "0.5.7",
     "@tailwindcss/typography": "0.5.10",
+    "@types/mapbox-gl": "^3.1.0",
     "@types/node": "20.11.24",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
@@ -47,8 +48,12 @@
   "type": "module",
   "dependencies": {
     "@floating-ui/dom": "1.6.3",
+    "@types/leaflet": "^1.9.8",
     "highlight.js": "11.9.0",
+    "leaflet": "^1.9.4",
     "lucide-svelte": "^0.344.0",
+    "mapbox-gl": "^3.2.0",
+    "maplibre-gl": "^4.1.1",
     "pocketbase": "^0.21.1",
     "stripe": "^14.19.0",
     "zod": "^3.22.4"
