--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
   "dependencies": {
     "@floating-ui/dom": "1.6.3",
     "@types/leaflet": "^1.9.8",
+    "@types/lodash": "^4.17.0",
     "highlight.js": "11.9.0",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-svelte": "^0.344.0",
     "mapbox-gl": "^3.2.0",
     "maplibre-gl": "^4.1.1",
